z-index fixes to put shield over apps, menus over app controls

--- a/libsrc/scss/edit.scss
+++ b/libsrc/scss/edit.scss
@@ -1,7 +1,7 @@
 @import "common";
 
 .ehapp, .ehapp > * { position : absolute; }
-.ehapp .shield { left : 0px; top : 0px; z-index: 1; width : 100%; height : 100%; }
+.ehapp .shield { left : 0px; top : 0px; z-index: 2; width : 100%; height : 100%; }
 .select_border {
     background-color: $color_selected; position: absolute;
     border-color: $color_light_blue;
